--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <section class="demo">
     <h2>Watch Demo</h2>
-    <a href="<!-- YOUR GOOGLE DRIVE LINK HERE -->" target="_blank" class="btn">▶️ View Demo Video</a>
+    <a href=" https://drive.google.com/file/d/14pAAc3p9m5X4D9slG0zPrVw5IWM0bw-q/view?usp=drive_link " target="_blank" class="btn">▶️ View Demo Video</a>
   </section>
 
   <section class="contact">
