--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
   <section class="features">
     <h2>Key Features</h2>
     <div class="feature-grid">
-      <div class="card">🧠 Real-time GPT Chat</div>
-      <div class="card">🎙️ Voice Interactions via ElevenLabs</div>
+      <div class="card">🧠 Real-time Chat</div>
+      <div class="card">🎙️ Voice Interactions</div>
       <div class="card">🧘 Breathing & Calming Exercises</div>
-      <div class="card">🧑‍🎤 AI Avatar with D-ID Integration</div>
+      <div class="card"> Intelligent Report Export System</div>
       <div class="card">📦 Credit-Based Subscription Plans</div>
       <div class="card">✈️ White-Label Option for Airlines</div>
+
     </div>
   </section>
 
